add produit ,achat and vente

--- a/front/src/utils/languages/fr.json
+++ b/front/src/utils/languages/fr.json
@@ -40,10 +40,31 @@
    "deleteDescriptionClient":"Êtes-vous sûr de vouloir supprimer ce client ? Cette action ne peut être annulée.",
    "cancel":"Annuler",
    "notFound":"Données non trouvées",
-    "addClient": "Ajouter un nouveau client",
-     "faildRequired":"Champs obligatoire",
-     "phoneerrors":"Veuillez saisir un numéro valide",
-     "updateClient": "Mettre à jour le client",
-     "fournisseur":"fournisseur",
-      "addFournisseur": "Ajouter un nouveau Fournisseur"
+   "addClient": "Ajouter un nouveau client",
+   "faildRequired":"Champs obligatoire",
+   "phoneerrors":"Veuillez saisir un numéro valide",
+   "updateClient": "Mettre à jour le client",
+   "fournisseur":"fournisseur",
+   "addFournisseur": "Ajouter un nouveau Fournisseur",
+   "produit": "Produit",
+   "addProduit": "Ajouter un nouveau Produit",
+   "nom":"Nom de produit",
+   "description":"Description",
+   "price":"Prix",
+   "stock":"Stock",
+   "ref":"Référence",
+   "priceMustBeNumber":"Le prix doit être un nombre",
+   "priceMustBePositive":"Le prix doit être un nombre non négatif",
+   "deleteDescriptionProduit":"Êtes-vous sûr de vouloir supprimer ce produit ? Cette action ne peut être annulée.",
+   "deleteTitleProduit":"Supprimer produit",
+   "achat":"Achats",
+   "addAchat":"Ajouter un nouveau Achat",
+   "nomClients":"Nom de client ",
+   "pending" : "En attente",
+   "paid" : "Payé",
+   "cancelled" : "Annulé",
+   "montantTotal":"Montant totale",
+     "quantite":"Quantité"
+
+
 }
