--- a/front/src/utils/languages/en.json
+++ b/front/src/utils/languages/en.json
@@ -45,5 +45,27 @@
    "phoneerrors":"Please enter a valid number",
    "updateClient": "Update Client",
    "fournisseur":"Supplier",
-   "addFournisseur": "Add New Supplier"
+   "addFournisseur": "Add New Supplier",
+   "produit": "Products",
+   "addProduit": "Add New Product",
+   "nom":"Product name",
+   "description": "Description",
+   "price": "Price",
+   "stock":"Stock",
+   "ref":"Reference",
+   "priceMustBeNumber":"Price must be a number",
+   "priceMustBePositive":"Price must be a non-negative number",
+   "deleteDescriptionProduit":"Are you sure you want to delete this product? This action cannot be undone.",
+   "deleteTitleProduct":"Delete product",
+   "achat":"Purchases",
+   "addAchat": "Add New Purchase",
+   "vente":"Sales",
+   "addVente": "Add New Sales",
+   "nomClients":"Customer name ",
+   "pending":"Pending",
+   "paid":"Paid",
+   "cancelled":"Cancelled",
+    "montantTotal":"Total amount",
+    "quantite":"Quantity"
+
 }
