fix add multipul articel

--- a/front/src/utils/languages/fr.json
+++ b/front/src/utils/languages/fr.json
@@ -92,5 +92,6 @@
    "cheque":"Chéque",
    "traite":"Traite",
    "virementBancaire":"Virement bancaire",
-   "produitTitle":"Produit"
+   "produitTitle":"Produit",
+   "quantiteExceedsStock":"La quantité dépasse le stock"
 }
