--- a/front/src/utils/languages/en.json
+++ b/front/src/utils/languages/en.json
@@ -88,6 +88,7 @@
    "cheque": "Cheque",
    "traite": "Draft",
    "virementBancaire": "Bank transfer",
-   "produitTitle":"Product"
+   "produitTitle":"Product",
+   "quantiteExceedsStock":"Quantity exceeds stock"
 
 }
