end worke in achat and vente

--- a/front/src/utils/languages/en.json
+++ b/front/src/utils/languages/en.json
@@ -89,6 +89,7 @@
    "traite": "Draft",
    "virementBancaire": "Bank transfer",
    "produitTitle":"Product",
-   "quantiteExceedsStock":"Quantity exceeds stock"
+   "quantiteExceedsStock":"Quantity exceeds stock",
+   "modepaiement":"Payment method"
 
 }
