end suivi caissee and debut suivi recouvrement

--- a/front/src/utils/languages/en.json
+++ b/front/src/utils/languages/en.json
@@ -64,6 +64,7 @@
    "nomClients":"Customer name ",
    "pending":"Pending",
    "paid":"Paid",
+   "semipaid" : "Semi-paid",
    "cancelled":"Cancelled",
    "montantTotal":"Total amount",
    "quantite":"Quantity",
@@ -98,6 +99,32 @@
    "addBanque": "Add New Bank",
     "deleteDescriptionBanque":"Are you sure you want to delete this Bank? This action cannot be undone.",
    "deleteTitleBanque":"Delete Bank",
-   "credit":"Credit tracking"
+   "credit":"Credit tracking",
+   "echeance":"Due date",
+   "principal":"Principal",
+   "interet":"Interet",
+   "total":"total",
+   "montantEmprunt":"Amount borrowed",
+   "typeCredit":"Type of credit",
+   "encours":"Outstanding amount",
+   "etat":"State",
+   "addCredit": "Add New Credit",
+   "mustnumber":"must be a number",
+   "mustnonnegative":"must be a non-negative number",
+   "deleteTitleCredit":"Delete Credit",
+   "deleteDescriptionCredit":"Are you sure you want to delete this Credit? This action cannot be undone.",
+   "designation":"Designation",
+   "encaissement":"Collection",
+   "decaissement":"Disbursement",
+   "caisse":"Cash register tracking",
+   "addCaisse": "Add New cash desk",
+   "deleteTitleCaisse":"Delete cash desk",
+   "deleteDescriptionCaisse":"Are you sure you want to delete this cash desk? This action cannot be undone.",
+   "recouverement":"Collection follow-up",
+   "reste":"Remainder to be paid",
+   "avance":"Advance",
+   "numero":"Cheque/draft/payment number",
+   "listfacturepaid":"Lists of paid invoices",
+   "listfacturenopaid":"Lists of pending or unpaid invoices"
 
 }
