--- a/front/src/utils/languages/fr.json
+++ b/front/src/utils/languages/fr.json
@@ -68,6 +68,7 @@
    "nomClients":"Nom de client ",
    "pending" : "En attente",
    "paid" : "Payé",
+   "semipaid" : "Semi Payé",
    "cancelled" : "Annulé",
    "montantTotal":"Montant totale",
    "quantite":"Quantité",
@@ -102,5 +103,32 @@
    "addBanque": "Ajouter un nouveau Banque",
    "deleteTitleBanque":"Supprimer Banque",
    "deleteDescriptionBanque":"Êtes-vous sûr de vouloir supprimer ce banque ? Cette action ne peut être annulée.",
-   "credit":"Suivi des crédits"
+   "credit":"Suivi des crédits",
+   "echeance":"Échéance",
+   "principal":"Principal",
+   "interet":"Interet",
+   "total":"total",
+   "montantEmprunt":"Montant d'emprunt",
+   "typeCredit":"Type crédit",
+   "encours":"Encours",
+   "etat":"Etat",
+   "addCredit": "Ajouter un nouveau crédit",
+   "mustnumber":"doit être un nombre",
+   "mustnonnegative":"doit être un nombre non négatif ",
+   "deleteTitleCredit":"Supprimer Crédit",
+   "deleteDescriptionCredit":"Êtes-vous sûr de vouloir supprimer ce crédit ? Cette action ne peut être annulée.",
+   "designation":"Désignation",
+   "encaissement":"Encaissement",
+   "decaissement":"Décaissement",
+   "caisse":"Suivi caisse espèce",
+   "addCaisse": "Ajouter un nouveau caisse",
+   "deleteTitleCaisse":"Supprimer caisse",
+   "deleteDescriptionCaisse":"Êtes-vous sûr de vouloir supprimer ce caisse ? Cette action ne peut être annulée.",
+   "recouverement":"Suivi Recouvrement",
+   "reste":"Reste à payé",
+   "avance":"Avance",
+   "numero":"Numero cheque/trait/vairement",
+   "listfacturepaid":"Listes de factures payées",
+   "listfacturenopaid":"Listes des factures en attentes ou non payés"
+
 }
