corrige bug and add ecosystem

--- a/front/src/utils/languages/en.json
+++ b/front/src/utils/languages/en.json
@@ -38,12 +38,15 @@
    "matriculeFiscale":"Fiscal number",
    "deleteTitleClient":"Delete Client",
    "deleteDescriptionClient":"Are you sure you want to delete this client? This action cannot be undone.",
+   "deleteTitleFournisseur":"Delete Supplier",
+   "deleteDescriptionFournisseur":"Are you sure you want to delete this Supplier? This action cannot be undone.",
    "cancel":"Cancel",
    "notFound":"Not Found Data",
    "addClient": "Add New Client",
    "faildRequired":"Required fields",
    "phoneerrors":"Please enter a valid number",
    "updateClient": "Update Client",
+   "updateFournisseur": "Update Supplier",
    "fournisseur":"Supplier",
    "addFournisseur": "Add New Supplier",
    "produit": "Stock/Inventory",
