--- a/front/src/utils/languages/fr.json
+++ b/front/src/utils/languages/fr.json
@@ -38,12 +38,15 @@
    "matriculeFiscale":"Matricule fiscal",
    "deleteTitleClient":"Supprimer le client",
    "deleteDescriptionClient":"Êtes-vous sûr de vouloir supprimer ce client ? Cette action ne peut être annulée.",
+   "deleteTitleFournisseur":"Supprimer le Fournisseur",
+   "deleteDescriptionFournisseur":"Êtes-vous sûr de vouloir supprimer ce Fournisseur ? Cette action ne peut être annulée.",
    "cancel":"Annuler",
    "notFound":"Données non trouvées",
    "addClient": "Ajouter un nouveau client",
    "faildRequired":"Champs obligatoire",
    "phoneerrors":"Veuillez saisir un numéro valide",
    "updateClient": "Mettre à jour le client",
+   "updateFournisseur": "Mettre à jour le Fournisseur",
    "fournisseur":"fournisseur",
    "addFournisseur": "Ajouter un nouveau Fournisseur",
    "produit": "Stock/Inventaire",
@@ -59,6 +62,7 @@
    "tvaMustBePositive":"Le prix doit être un nombre non négatif",
    "quantiteMustBeNumber":"Le prix doit être un nombre",
    "quantiteMustBePositive":"Le prix doit être un nombre non négatif",
+   "deleteTitleProduct":"Supprimer produit",
    "deleteDescriptionProduit":"Êtes-vous sûr de vouloir supprimer ce produit ? Cette action ne peut être annulée.",
    "deleteTitleProduit":"Supprimer produit",
    "achat":"Achats",
