--- a/front/src/utils/languages/en.json
+++ b/front/src/utils/languages/en.json
@@ -35,7 +35,7 @@
    "address":"Address",
    "phone":"Phone Number",
    "email":"Email Address",
-   "matriculeFiscale":"Fiscal number",
+   "matriculeFiscale":"Fiscal number / CIN",
    "deleteTitleClient":"Delete Client",
    "deleteDescriptionClient":"Are you sure you want to delete this client? This action cannot be undone.",
    "deleteTitleFournisseur":"Delete Supplier",
@@ -52,7 +52,7 @@
    "produit": "Stock/Inventory",
    "addProduit": "Add New Product",
    "nom":"Product name",
-   "description": "Description",
+   "description": "Description by invoice/uninvoiced",
    "price": "Price",
    "stock":"Stock",
    "ref":"Reference",
@@ -76,7 +76,7 @@
    "descriptionUpdateStatus":"Please update status",
    "sorte":"Outgoing stock",
    "entre":"Incoming stock",
-   "stockProduction": "Stock/Inventory Production",
+   "stockProduction": "Stock/Inventory for sale",
    "stockAchat": "Stock/Inventory Purchased",
    "typeProduit":"Product type",
    "imprimer":"print",
