--- a/front/src/utils/languages/fr.json
+++ b/front/src/utils/languages/fr.json
@@ -35,7 +35,7 @@
    "address":"Adresse",
    "phone":"Téléphone",
    "email":"Adresse e-mail",
-   "matriculeFiscale":"Matricule fiscal",
+   "matriculeFiscale":"Matricule fiscal / CIN",
    "deleteTitleClient":"Supprimer le client",
    "deleteDescriptionClient":"Êtes-vous sûr de vouloir supprimer ce client ? Cette action ne peut être annulée.",
    "deleteTitleFournisseur":"Supprimer le Fournisseur",
@@ -52,7 +52,7 @@
    "produit": "Stock/Inventaire",
    "addProduit": "Ajouter un nouveau Produit",
    "nom":"Nom de produit",
-   "description":"Description",
+   "description":"Description par facture/non facturé",
    "price":"Prix",
    "stock":"Stock",
    "ref":"Référence",
@@ -81,7 +81,7 @@
    "descriptionUpdateStatus" : "Veuillez mettre à jour votre statut",
    "sorte":"Stock sortant",
    "entre":"Stock entrant",
-   "stockProduction":"Stock/Inventaire Production",
+   "stockProduction":"Stock/Inventaire a vendre",
    "stockAchat":"Stock/Inventaire Achetés",
    "typeProduit":"Type de produit",
    "imprimer":"Imprimer",
