add filter and acces

--- a/front/src/utils/languages/fr.json
+++ b/front/src/utils/languages/fr.json
@@ -47,7 +47,7 @@
    "phoneerrors":"Veuillez saisir un numéro valide",
    "updateClient": "Mettre à jour le client",
    "updateFournisseur": "Mettre à jour le Fournisseur",
-   "fournisseur":"fournisseur",
+   "fournisseur":"Fournisseur",
    "addFournisseur": "Ajouter un nouveau Fournisseur",
    "produit": "Stock/Inventaire",
    "addProduit": "Ajouter un nouveau Produit",
