update modue produit achat vente

--- a/front/src/utils/languages/en.json
+++ b/front/src/utils/languages/en.json
@@ -55,6 +55,8 @@
    "nom":"Product name",
    "description": "Description by invoice/uninvoiced",
    "price": "Price",
+   "pricesales": "Selling price", 
+   "pricepurchase": "Purchase price", 
    "stock":"Stock",
    "ref":"Reference",
    "priceMustBeNumber":"Price must be a number",
