add update entreprise and fix home

--- a/front/src/utils/languages/en.json
+++ b/front/src/utils/languages/en.json
@@ -145,6 +145,10 @@
    "montantbenefices":"Profit amount",
    "entreprise":"Company",
     "nameentreprise":"Company Name",
-    "matriculeFiscale2":"Tax registration number"
+    "matriculeFiscale2":"Tax registration number",
+    "nomEntreprise":"Company name",
+    "addressEntreprise":"Company address",
+    "phoneEntreprise":"Company phone",
+    "matriculefiscaleEntreprise":"company tax number"
 
 }
