fix bug and update

--- a/front/src/utils/languages/en.json
+++ b/front/src/utils/languages/en.json
@@ -149,6 +149,7 @@
     "nomEntreprise":"Company name",
     "addressEntreprise":"Company address",
     "phoneEntreprise":"Company phone",
-    "matriculefiscaleEntreprise":"company tax number"
+    "matriculefiscaleEntreprise":"company tax number",
+    "pendingecheance":"pending due date"
 
 }
